--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,9 @@
 body {
-  padding: 0;
-}
-
-h1 {
-  color: #369;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 250%;
+    margin: 0;
+    background: #f3f3f3;
 }
 
 a {
+  display: block;
   text-decoration: none;
 }
