--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,6 +16,7 @@
   line-height: 60px;
   border-bottom: 1px solid rgba(101, 116, 134, 0.57);
   cursor: pointer;
+  text-decoration: none;
 }
 
 .logo:after {
