--- a/src/app/stock/goods/goods.component.css
+++ b/src/app/stock/goods/goods.component.css
@@ -38,18 +38,9 @@ $grey: #e5e6e7;
 
 /* ------------- table ------------- */
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-  text-align: left;
-}
-
-tbody tr {
-  border-top: 1px solid #e5e6e7;
-}
 
 tbody tr:hover {
-  background-color: #f5f5f5;
+  cursor: pointer;
 }
 
 th:first-child, td:first-child {
@@ -71,6 +62,3 @@ button {
 button:hover {
   background-color: #5fc1ad;
 }
-
-/* ------------- form ------------- */
-
