--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,11 @@ a {
   display: block;
   text-decoration: none;
 }
+
+.ng-valid[required] {
+  border-left: 5px solid #42A948;
+}
+
+.ng-invalid:not(form) {
+  border-left: 5px solid #a94442;
+}
