--- a/src/app/stock/goods/goods.component.html
+++ b/src/app/stock/goods/goods.component.html
@@ -1,7 +1,9 @@
-<div class="box">
-  <p class="box-title">title</p>
-  <div class="box-body">
-    <div class="panel">
+<div class="panel panel-default">
+  <div class="panel-heading">
+      <h3 class="panel-title">title</h3>
+  </div>
+  <div class="panel-body">
+    <div>
       <search></search>
       <span class="button-group">
         <button (click)="add()">添加</button>
