修改search组件以复用

--- a/src/app/stock/goods/goods.component.css
+++ b/src/app/stock/goods/goods.component.css
@@ -3,6 +3,9 @@ $green: #18a689;
 $light-green: #5fc1ad;
 $grey: #e5e6e7;
 */
+.panel-body div {
+  margin: 10px 20px;
+}
 
 .button-group {
   float: right;
