增加了会员的查询和添加

--- a/src/app/beehive/storeQuery/store.detail.html
+++ b/src/app/beehive/storeQuery/store.detail.html
@@ -12,4 +12,4 @@
 	<p><span>姓名: {{store.headPeople.name}}</span><span>电话: {{store.headPeople.tel}}</span></p>
 	<p><span>邮箱: {{store.headPeople.email}}</span><span>地址: {{store.headPeople.location}}</span></p>
 </div>
-<button (click)="goBack()">Back</button>
+<button (click)="goBack()" class="btn-default btn">Back</button>
