--- a/src/app/members/memberQuery/member.query.html
+++ b/src/app/members/memberQuery/member.query.html
@@ -1,4 +1,4 @@
- class="btn-success btn"<form class="form-inline" #queryForm="ngForm" (ngSubmit)="onSubmit(name.value)">
+ <form class="form-inline" #queryForm="ngForm" (ngSubmit)="onSubmit(name.value)">
   <div class="form-group">
     <label for="id">会员ID</label>
     <input type="text" class="form-control" id="id" placeholder="" required #name>
@@ -56,4 +56,6 @@
         </tr>
       </tbody>
     </table>
+    <br>
+    <button (click)="back()" class="btn-success btn">返回</button >
 </div>
